--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,6 +6,10 @@ node_modules/
 
 # Uploads
 uploads/
+storage/
+
+# Reports
+reports/
 
 # Logs
 logs
@@ -24,3 +28,12 @@ Thumbs.db
 *.swp
 *.swo
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
