--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,23 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["legal", "ai", "document-analysis"],
+  "keywords": [
+    "legal",
+    "ai",
+    "document-analysis"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "tesseract.js": "^5.0.4",
-    "pdf-parse": "^1.1.1",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "mammoth": "^1.6.0"
+    "express": "^4.18.2",
+    "form-data": "^4.0.5",
+    "mammoth": "^1.6.0",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^5.0.4"
   }
 }
-
-
