--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,19 @@ dist-ssr
 *.sw?
 
 
+# Ignore node_modules in any folder
+**/node_modules/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+# Ignore environment variables
+**/.env
+
+# Ignore build/dist folders
+**/dist/
+**/build/
+
+# Ignore OS files
+.DS_Store
+Thumbs.db
