--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "tesseract.js": "^5.0.4",
-    "pdf-parse": "^1.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "mammoth": "^1.6.0"
+    "dotenv": "^16.3.1"
   }
 }
 
